# ebook-mcp

./: .gitignore  .requirements.txt.swp  CHANGELOG.md  HOW-TO-TEST.md  MCP_SETUP_GUIDE.md  README-CN.md  README-DE.md  README-FR.md  README-JP.md  README-KR.md  README.md  claude_desktop_config.json  claude_desktop_config_complete.json  claude_desktop_config_minimal.json  debug_anchor_structure.py  debug_epub_toc.py  debug_toc_matching.py  extract_emotional_blackmail.py  extract_toc_only.py  fix_python_path.sh  get_all_epubs.py  install_mcp_config.sh  list_epubs.py  main.py  mcp_demo.py  mcp_demo_complete.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  test_chapter_fix.py  test_mcp_connection.py  troubleshoot_mcp.md  update_claude_config.sh
.github/workflows/: cli.yml
.kiro/hooks/: readme-translation-hook.kiro.hook
.kiro/specs/mcp-chat-ui/: design.md  requirements.md  tasks.md
.kiro/steering/: ebook-mcp-project-guide.md  ebook-mcp-server-guide.md  mcp-chat-ui-guide.md
mcp-chat-ui/: .eslintrc.json  .gitignore  ACCESSIBILITY.md  LIGHT_THEME_FIXES.md  README-CN.md  README-JP.md  README-KR.md  README.md  RESPONSIVE_DESIGN.md  SIDEBAR_CLICK_OUTSIDE.md  SIDEBAR_CLICK_OUTSIDE_SUMMARY.md  STORAGE_ARCHITECTURE.md  THEME_AND_STORAGE_FIXES.md  debug-storage.html  fix-imports.js  fix-theme.js  light-theme-test.html  package-lock.json  package.json  tailwind.config.js  test-frontend-data.js  test-light-theme-fixes.js  test-settings-api.js  test-sidebar-click-outside.js  test-sidebar-functionality.html  theme-test.html  tsconfig.app.json  tsconfig.app.tsbuildinfo  verify-light-theme.js  vite.config.ts
mcp-chat-ui/backend/: .env.example  .eslintrc.js  README.md  SECURITY.md  next.config.js  package-lock.json  package.json  test-api.js  tsconfig.json  vitest.config.ts
mcp-chat-ui/backend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  trace  (+1 more)
mcp-chat-ui/scripts/: security-check.sh
mcp-chat-ui/src/: App.tsx  index.css
mcp-client-example/: .gitignore  README-CN.md  README.md  anthropic_client.py  deepseek_example.py  deepseek_example_with_history.py  requirements.txt
src/ebook-mcp/: main.py
src/ebook_mcp/: main.py
tools/: logger_config.py  pdf_helper.py  test_epub_helper.py
(+270 files in other folders)
