[project]
name = "ebook-mcp"
version = "0.1.0"
description = "An MCP server for chatting with ebooks (PDF/EPUB)."
authors = [{ name = "onebird", email = "rymrocks@163.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "ebooklib>=0.17.1",
    "PyPDF2>=3.0.0",
    "PyMuPDF>=1.20.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2020.1.16",
    "pydantic>=2.0.0",
    "fastmcp>=0.1.0"  
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "uvicorn>=0.27.0,<1.0.0",
    "starlette>=0.36.3,<0.37.0",
    "uv"
]

[project.scripts]
ebook-mcp = "main:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
