[project]
name = "ebook-mcp"
version = "0.1.8"
description = "An MCP server for chatting with ebooks (PDF/EPUB)."
authors = [{ name = "onebird", email = "rymrocks@163.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "ebooklib>=0.19",
    "PyMuPDF>=1.26.3",
    "beautifulsoup4>=4.13.4",
    "html2text>=2025.4.15",
    "pydantic>=2.11.7",
    "fastmcp>=2.11.1",
    "typer>=0.16.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "uvicorn>=0.35.0,<1.0.0",
]



[project.scripts]
ebook-mcp = "ebook_mcp.main:cli_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebook_mcp"]